# travel-packer

./: LICENSE  README.md
.github/: pull_request_template.md
backend/: .gitignore  .pre-commit-config.yaml  README.md  constants.py  pyproject.toml
backend/app/: __init__.py  main.py  models.py
backend/app/routes/: __init__.py  item.py  sample.py  trip.py  user.py
backend/app/state/: db.py
backend/computer_vision/: cv.py  utils.py
backend/hardware/: readscale.py  test_readscale.py  utils.py
backend/machine_learning/: item_groups.py  items.json  poc_decision_model.py  utils.py
backend/tests/integration/: test_item.py  test_trip.py
backend/tests/unit/: test_baseline_list.py  test_cv.py  test_item.py  test_removal.py  test_trip.py
frontend/: README.md  app.json  global.css  package-lock.json  package.json
frontend/app/: _layout.tsx
frontend/app/(tabs)/: PackingList.tsx  Scan.tsx  TripInfo.tsx  _layout.tsx  index.tsx  list.tsx  pack.tsx
frontend/components/: BoundingBoxOverlay.tsx  PackingListItem.tsx  PackingListPill.tsx  PackingRecommendationStatus.tsx  ThemedButton.tsx  ThemedCheckbox.tsx  ThemedDropdown.tsx  ThemedLoading.tsx  ThemedPicker.tsx  ThemedText.tsx  ThemedTextInput.tsx  themed-text-input.tsx
frontend/components/ui/: icon-symbol.tsx
frontend/constants/: theme.ts  types.ts
frontend/helpers/: AppContext.tsx  cn.ts
frontend/hooks/: use-color-scheme.web.ts
