[project]
name = "travel-packer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.121.0",
    "numpy>=1.24.0",
    "opencv-contrib-python>=4.12.0.88",
    "opencv-python>=4.12.0.88",
    "python-multipart>=0.0.20",
    "pyusb>=1.2.1",
    "requests>=2.32.5",
    "ultralytics>=8.3.228",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "httpx>=0.28.1",
    "isort>=7.0.0",
    "pre-commit>=4.3.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = false
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
